fix : fix swagger docs and controllers
