# be-soal-03/docs/swagger.json
@@ -96,10 +96,7 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
+                        "description": "Created"
                     }
                 }
             }
@@ -422,9 +419,6 @@
                 },
                 "organizer": {
                     "$ref": "#/definitions/models.User"
-                },
-                "organizer_id": {
-                    "type": "integer"
                 },
                 "status": {
                     "type": "string"
