# be-soal-03/models/event.go
@@ -10,7 +10,7 @@ type Event struct {
 	Location        string    `gorm:"type:varchar(255);not null" json:"location"`
 	TotalTicket     int       `gorm:"not null" json:"total_ticket"`
 	AvailableTicket int       `gorm:"not null" json:"available_ticket"`
-	OrganizerID     uint      `gorm:"not null" json:"organizer_id"`
+	OrganizerID     uint      `gorm:"not null" json:"-"`
 	Status          string    `gorm:"type:varchar(50);not null" json:"status"`
 	CreatedAt       time.Time `json:"created_at"`
 	UpdatedAt       time.Time `json:"updated_at"`
